--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,6 +22,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Waldenses'
 - !lcc 'BX'
+- GITenberg
 title: 'L''Histoire Des Vaudois
 
   From Authentic Details of the Valdenses'
